--- a/pc_index.css
+++ b/pc_index.css
@@ -15,9 +15,9 @@ font-style:oblique;
 }
 
 
-body>header>img{
+body>img{
     display:block;
-    width: 150px;
+    width: 10%;
     height: 100px;
     float:right;
 }
@@ -30,10 +30,6 @@ form {
     text-align: left;
     display: block;
     font-style: white;
-}
-
-button{
-    background-color: gray;
 }
 
 
